# terra

./: .gitignore  README.md  docker-compose.deploy.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: docker-image.yml  fastapi_tests.yml  terra-workflow.yml
services/backend/: .env.dev  .env.example  .env.test  .example.env  .test.env  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
services/backend/src/: app.sh  config.py  dao.py  database.py  exceptions.py  main.py  test.py
services/backend/src/chats/: dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
services/backend/src/crud/: user.py
services/backend/src/database/: database.py  models.py
services/backend/src/migrations/: env.py
services/backend/src/migrations/versions/: 2024_02_08_1549-490bdef63ad9_.py  2024_02_19_1853-f3b724cbcbf3_.py  2024_02_19_2000-c7191e2284b7_fix_friends_table.py  2024_02_19_2140-ae141683a904_fix_friends_table.py  2024_02_19_2156-cf6a7822d580_.py
services/backend/src/routes/: users.py
services/backend/src/schemas/: users.py
services/backend/src/users/: dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
services/backend/tests/: conftest.py  test_auth.py
services/backend/tests/auth/: conftest.py  test_auth.py
services/backend/tests/chats/: conftest.py  test_chats.py
services/backend/tests/users/: conftest.py  test_user.py
services/frontend/: .env.production  Dockerfile  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  vite.config.js
(+18 files in other folders)
