[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
SQLAlchemy = "^2.0.28"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
python-jose = "^3.3.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
uvicorn = "^0.28.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
pytest-dotenv = "^0.5.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
